--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "build:dev":"cross-env NODE_ENV=development yarn build"
+    "build:dev": "cross-env NODE_ENV=development yarn build"
   },
   "dependencies": {
+    "@types/echarts": "^4.9.3",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.4",
+    "echarts": "^5.0.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
