--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@types/echarts": "^4.9.3",
+    "@types/lodash": "^4.14.168",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.4",
     "echarts": "^5.0.1",
+    "lodash": "^4.17.20",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
